Added four more tests covering requirements.